Implementing register with response for netty server.

--- a/src/main/resources/netty/websocket.html
+++ b/src/main/resources/netty/websocket.html
@@ -13,7 +13,7 @@
             <input type="submit" value="Send Hello">
         </form>
         <form name="inputform1">
-            <input type="text" name="message" id="message" value='{"messageType": "register", "uaid": "abc123"}'>
+            <input type="text" name="message" id="message" value='{"messageType": "register", "channelID": "testChannel"}'>
             <input type="submit" value="Send Register">
         </form>
         <h2>Repsonse from Server</h2>
