Updating to use Netty 5.0.0.Alpha1.

--- a/server-netty/src/test/resources/sockjs-client.html
+++ b/server-netty/src/test/resources/sockjs-client.html
@@ -47,7 +47,8 @@
 
     <script>
         var sockjs_url = 'http://localhost:7777/simplepush';
-        var sockjs = new SockJS(sockjs_url);
+        //var sockjs = new SockJS(sockjs_url);
+        var sockjs = new SockJS(sockjs_url, null, {"debug": true, "protocols_whitelist": ["xhr-polling"]});
 
         $('#first input').focus();
 
