Revisit SockJS session handling
The session handling in SockJS was too complicated and fragile. This
PR is a simplification of the handling of sessions mainly focused on
sipmlifying the SessionHandler class.

- These changes are a port of the same code in Netty SockJS
- These changes have been verified and are inline with the
  sockjs-protocol-0.3.3 testsuite.

[https://issues.jboss.org/browse/AGSMPLPUSH-50]

--- a/server-netty/src/test/resources/sockjs-client.html
+++ b/server-netty/src/test/resources/sockjs-client.html
@@ -48,9 +48,9 @@
 
     <script>
         var sockjs_url = 'http://localhost:7777/simplepush';
-        //var sockjs = new SockJS(sockjs_url);
+        var sockjs = new SockJS(sockjs_url);
         //var sockjs = new SockJS(sockjs_url, null, {"debug": true, "protocols_whitelist": ["jsonp-polling"]});
-        var sockjs = new SockJS(sockjs_url, null, {"debug": true, "protocols_whitelist": ["xhr-polling"]});
+        //var sockjs = new SockJS(sockjs_url, null, {"debug": true, "protocols_whitelist": ["xhr-polling"]});
         //var sockjs = new SockJS(sockjs_url, null, {"debug": true, "protocols_whitelist": ["xhr-streaming"]});
 
         $('#first input').focus();
